Update Invert P for Key Calculation

--- a/CrypPlugins/HillCipherAttack/Properties/Resources.resx
+++ b/CrypPlugins/HillCipherAttack/Properties/Resources.resx
@@ -138,6 +138,9 @@
   <data name="HillCipherAttackTooltip" xml:space="preserve">
     <value>Implements the Known Plaintext Attack for Hill Cipher</value>
   </data>
+  <data name="InputContainsIllegalCharacter" xml:space="preserve">
+    <value>There is a not allowed character in the Input</value>
+  </data>
   <data name="InvalidException" xml:space="preserve">
     <value>Invalid text matrix</value>
   </data>
@@ -158,6 +161,18 @@
   </data>
   <data name="KTooltip" xml:space="preserve">
     <value>Key Text Output</value>
+  </data>
+  <data name="NoIdentityMatrix" xml:space="preserve">
+    <value>There is no Identity Matrix</value>
+  </data>
+  <data name="NoKeyFound" xml:space="preserve">
+    <value>The key cannot be calculated.</value>
+  </data>
+  <data name="NotEnoughData" xml:space="preserve">
+    <value>There are not enough values for the dimension {0} to execute the calculation.</value>
+  </data>
+  <data name="NotInvertable" xml:space="preserve">
+    <value>The Matrix is not invertable</value>
   </data>
   <data name="PCaption" xml:space="preserve">
     <value>Plaintext Input</value>
