--- a/CrypPlugins/HillCipherAttack/Properties/Resources.de.resx
+++ b/CrypPlugins/HillCipherAttack/Properties/Resources.de.resx
@@ -22,8 +22,10 @@
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
         <value>[base64 mime encoded serialized .NET Framework object]</value>
     </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing"
+  mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework
+  object]</value>
         <comment>This is a comment</comment>
     </data>
                 
@@ -59,7 +61,8 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+    xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
@@ -112,10 +115,12 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0,
+      Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0,
+      Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Alphabet" xml:space="preserve">
     <value>Alphabet</value>
@@ -124,129 +129,129 @@
     <value>Alphabet </value>
   </data>
   <data name="AlphabetTooltip" xml:space="preserve">
-    <value>Alphabet - Defintion of allowed characters</value>
+    <value>Alphabet - Denfiniert die erlaubten Buchstaben</value>
   </data>
   <data name="AttackTypeCaption" xml:space="preserve">
-    <value>Attack Type</value>
+    <value>Typ der Attacke</value>
   </data>
   <data name="AttackTypeTooltip" xml:space="preserve">
-    <value>Select between Kown Plaintext and Ciphertext Only Attack.</value>
+    <value>Wähle zwischen Known-Plaintext und Ciphertext-Only Attacke.</value>
   </data>
   <data name="CCaption" xml:space="preserve">
-    <value>Cipher Input</value>
+    <value>Eingabe Geheimtext</value>
   </data>
   <data name="Cipher" xml:space="preserve">
-    <value>Cipher</value>
+    <value>Geheimtext</value>
   </data>
   <data name="CTooltip" xml:space="preserve">
-    <value>Cipher Text Input</value>
+    <value>Geheimtext Eingabe</value>
   </data>
   <data name="DictCaption" xml:space="preserve">
-    <value>Dictionary </value>
+    <value>Wörterbuch</value>
   </data>
   <data name="DictTooltip" xml:space="preserve">
-    <value>Dictionary for Plaintext generation</value>
+    <value>Wörterbuch für die Generierung des klartexts</value>
   </data>
   <data name="ErrorMessage" xml:space="preserve">
-    <value>Error: {0}</value>
+    <value>Fehler: {0}</value>
   </data>
   <data name="HillCipherAttackCaption" xml:space="preserve">
-    <value>Kown Plaintext/Ciphertext Only Attack for Hill Cipher</value>
+    <value>Kown-Plaintext/Ciphertext-Only Attacke für die Hill-Chiffre</value>
   </data>
   <data name="HillCipherAttackTooltip" xml:space="preserve">
-    <value>Implements the Kown Plaintext/Ciphertext Only Attack for Hill Cipher</value>
+    <value>Implementierung der Kown-Plaintext/Ciphertext-Only Attacke für Hill Cipher</value>
   </data>
   <data name="IncorrectKey" xml:space="preserve">
-    <value>The calculated key is incorrect.</value>
+    <value>Der berechnete schlüssel is nicht korrekt.</value>
   </data>
   <data name="InputContainsIllegalCharacter" xml:space="preserve">
-    <value>There is a not allowed character in the Input</value>
+    <value>Die eingabe enthält einen nicht erlaubten Buchstaben.</value>
   </data>
   <data name="InvalidException" xml:space="preserve">
-    <value>Invalid text matrix</value>
+    <value>Die Matrix des Textes ist nicht korrekt.</value>
   </data>
   <data name="InversCalcTypeCaption" xml:space="preserve">
-    <value>Calculation Method</value>
+    <value>Berechnungsmethode</value>
   </data>
   <data name="InverseCalcTypeTooltip" xml:space="preserve">
-    <value>Select between adjoint matrix and eigenvectors to calculate the inverse matrix.</value>
+    <value>Wähle zwischen der Berechnung der inversen mittels der adjungierten Matrix oder mittels Eigenvektoren und Eigenwerten.</value>
   </data>
   <data name="KCaption" xml:space="preserve">
-    <value>Key</value>
+    <value>Schlüssel</value>
   </data>
   <data name="KDimCaption" xml:space="preserve">
-    <value>Keydimension</value>
+    <value>Dimensions des Schlüssels</value>
   </data>
   <data name="KDimTooltip" xml:space="preserve">
-    <value>The Dimension of the key Matrix</value>
+    <value>Dimension der Schlüsselmatrix</value>
   </data>
   <data name="Key" xml:space="preserve">
-    <value>Key</value>
+    <value>Schlüssel</value>
   </data>
   <data name="Keydimension" xml:space="preserve">
-    <value>Keydimension</value>
+    <value>Dimension des Schlüssels</value>
   </data>
   <data name="KeyValue" xml:space="preserve">
-    <value>Key: {0}</value>
+    <value>Schlüssel: {0}</value>
   </data>
   <data name="KMatCaption" xml:space="preserve">
-    <value>Key Matrix</value>
+    <value>Schlüsselmatrix</value>
   </data>
   <data name="KMatTooltip" xml:space="preserve">
-    <value>Key Matrix as numbers</value>
+    <value>Schlüsselmatrix mit gsnzrn Zahlen</value>
   </data>
   <data name="KTooltip" xml:space="preserve">
-    <value>Key Text Output</value>
+    <value>Ausgabe des Schlüssels als Text</value>
   </data>
   <data name="LanguageCaption" xml:space="preserve">
-    <value>Language</value>
+    <value>Sprache</value>
   </data>
   <data name="LanguageTooltip" xml:space="preserve">
-    <value>Select between German and English dictionary entries</value>
+    <value>Wähle zwischen Deutsch und Englisch für die Wörterbucheinträge</value>
   </data>
   <data name="ModulusCaption" xml:space="preserve">
     <value>Modulus</value>
   </data>
   <data name="ModulusTooltip" xml:space="preserve">
-    <value>Parameter m - Length of the Alphabet</value>
+    <value>Parameter m - Länge des Alphabets</value>
   </data>
   <data name="MultiplicationException" xml:space="preserve">
-    <value>Exception: The number of columns of the first matrix must be equal to the number of rows of the second matrix.</value>
+    <value>Exception: Die Anzahl der Spalten der ersten Matrix muss gleich der Anzahl der Zeilen der zweiten Matrix sein.</value>
   </data>
   <data name="NoDictionary" xml:space="preserve">
-    <value>No dictionary available</value>
+    <value>Es ist kein Dictionary verfügbar.</value>
   </data>
   <data name="NoIdentityMatrix" xml:space="preserve">
-    <value>There is no identity matrix</value>
+    <value>Es liegt keine Identitätsmatrix vor.</value>
   </data>
   <data name="NoKeyFound" xml:space="preserve">
-    <value>The key cannot be calculated.</value>
+    <value>Der Schlüssel konnte nicht berechnet werden.</value>
   </data>
   <data name="NoSquareMatrix" xml:space="preserve">
-    <value>Exception: The matrix is not square.</value>
+    <value>Exception: Es liegt keine quadratische Matrix vor.</value>
   </data>
   <data name="NotEnoughData" xml:space="preserve">
-    <value>There are not enough values for the dimension {0} to execute the calculation.</value>
+    <value>Es liegen nicht genügend Werte für die Berechnung für die Dimension {0} vor.</value>
   </data>
   <data name="NotInvertable" xml:space="preserve">
-    <value>The matrix {0} is not invertable.</value>
+    <value>Die matrix {0} ist nicht invertierbar.</value>
   </data>
   <data name="NoValidKeyForDim" xml:space="preserve">
-    <value>There is no valid key in dimension {0}</value>
+    <value>Es gibt keinen gültigen schlüssel für die dimension {0}.</value>
   </data>
   <data name="PCaption" xml:space="preserve">
-    <value>Plaintext Input</value>
+    <value>Eingabe des Klartexts</value>
   </data>
   <data name="Plaintext" xml:space="preserve">
-    <value>Plaintext</value>
+    <value>Klartext</value>
   </data>
   <data name="PTooltip" xml:space="preserve">
-    <value>Plain Text Input</value>
+    <value>Klartext Eingabe</value>
   </data>
   <data name="StartKeyDimensionCaption" xml:space="preserve">
-    <value>Start Key Dimension</value>
+    <value>Startdimension für den Schlüssel</value>
   </data>
   <data name="StartKeyDimensionTooltip" xml:space="preserve">
-    <value>The Calculation of the key starts at this dimension +1</value>
+    <value>Die Berechnung des Schlüssels beginnt bei dieser Dimension +1</value>
   </data>
 </root>
